feat (me): add documentation & proxy configuration
- add Swagger documentation for /api/auth/me endpoint
- update proxy configuration for /api/auth/me endpoint
- update interceptor to use real token on implemented endpoints otherwise use Mockoon
- fixes #3
